//
// PROJECT:         Aspia
// FILE:            category/category_license.proto
// LICENSE:         Mozilla Public License Version 2.0
// PROGRAMMERS:     Dmitry Chapyshev (dmitry@aspia.ru)
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package aspia.proto;

message License
{
    message Field
    {
        enum Type
        {
            TYPE_UNKNOWN         = 0;
            TYPE_OWNER           = 2;
            TYPE_ORGANIZATION    = 3;
            TYPE_PRODUCT_KEY     = 4;
            TYPE_PRODUCT_ID      = 5;
            TYPE_LICENSE_VERSION = 6;
            TYPE_LICENSE_TYPE    = 7;
        }

        Type type    = 1;
        string value = 2;
    }

    message Item
    {
        string product_name  = 1;
        repeated Field field = 2;
    }

    repeated Item item = 1;
}
